samples/_failures_safe/1761224061_7d2fd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4537537d.c: In function ‘main’:
./samples/SAFE/__tmp_4537537d.c:153:5: error: expected declaration or statement at end of input
  153 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
